--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:xsc.1219@qq.com
+  email:2055596311@qq.com
   facebook:
   flickr:
   github: qufuxsc
